Minor fix: preventing banner h1/h2 overflow making 480 viewport right-scrollable

--- a/fotomatic/resources/css/style.css
+++ b/fotomatic/resources/css/style.css
@@ -161,9 +161,9 @@ header .content .logo {
 
 .main-content .banner {
     background-image: url(../images/banner-landingpage.jpg);
-    background-size: cover;      /* Ensures the image covers the entire area */
-    background-position: center;  /* Centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-size: cover;  
+    background-position: center;
+    background-repeat: no-repeat;
     /* margin-top: 5.313rem; /* 85px */
 }
 
@@ -174,7 +174,6 @@ header .content .logo {
   justify-content: flex-start;
   align-items: flex-start;
   /* height: 43.5rem; */ 
-
 }
 
 #sign-up-cta {
@@ -277,6 +276,7 @@ header .content .logo {
 @media only screen and (max-width: 480px) {
   #sign-up-section {
     height: 20rem;
+    overflow: hidden;
   }
 
   #sign-up-cta h1 {
